[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-decrypt-macos"
version = "0.1.0"
description = "Decrypt and analyze your own WeChat chat databases on macOS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Communications :: Chat",
]

[project.scripts]
wechat-decrypt = "wechat_decrypt.cli:main"
